model ~83% accuracy intent classification

--- a/0. Initial Investigations.ipynb
+++ b/0. Initial Investigations.ipynb
@@ -1824,7 +1824,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I was e"
+    "I was excited when I saw this accuracy score!!"
    ]
   },
   {
@@ -1846,6 +1846,13 @@
    "source": [
     "#accuracy score\n",
     "model.score(x_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The examples below that it certainly isn't _that_ accurate"
    ]
   },
   {
