combination of manual rule and model

--- a/1. Classifying Utterances into Catergories by Intent.ipynb
+++ b/1. Classifying Utterances into Catergories by Intent.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,31 +310,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "x_in, x_out, y_in, y_out = train_test_split(X, Y, test_size=0.2, stratify=Y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((1581264,), (1581264,))"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x_in.shape, y_in.shape"
    ]
   },
   {
@@ -345,10 +325,30 @@
     {
      "data": {
       "text/plain": [
-       "((395317,), (395317,))"
+       "((1581264,), (1581264,))"
       ]
      },
      "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_in.shape, y_in.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((395317,), (395317,))"
+      ]
+     },
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -794,16 +794,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9997369199907922"
+       "0.9997520976836312"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1029,7 +1029,7 @@
        "12    PlayRadioIntent      True  "
       ]
      },
-     "execution_count": 111,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1043,6 +1043,32 @@
    "metadata": {},
    "source": [
     "The results don't seem to be too bad. My human brain is suprised that the model hasn't associated the word \"radio\" with \"PlayRadioIntent\", but I'm only a human. 🤷🏻‍♀️"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Saving the Trained Model for Use Later"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = 'trained_model.pickle'\n",
+    "pickle.dump(model, open(filename, 'wb'))"
    ]
   },
   {
